[project]
name = "multiplex"
version = "0.0.0"
description = "Local LLM inference on mlx-lm: batched MTP speculative decoding with a dynamic-batch scheduler (concurrent requests join/leave mid-flight)."
requires-python = ">=3.10"
dependencies = [
    "mlx>=0.20",
    "mlx-lm>=0.31",
]

[project.optional-dependencies]
cli = ["prompt_toolkit>=3.0"]   # try_engine.py interactive REPL only

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["slipstream*"]
